# neoprism

./: .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yml  .scala-steward.conf  .yamllint.yml  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  full-check.sh  index.html  justfile  print.html  pyproject.toml  run.sh  searcher-c2a407aa.js  searchindex-0af36205.js  searchindex-0b5d80d9.js  searchindex-22f0ea20.js  searchindex-42f71dc7.js  searchindex-48af96b5.js  searchindex-71835741.js  searchindex-d1ff7a8f.js  searchindex-e5089008.js  searchindex.js  toc-43afa49c.js  toc-ddbda910.js  toc.html  toc.js  useful-links.html
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.github/: dependabot.yml
.github/workflows/: bump-version.yml  checks.yml  conformance-test.yml  coverage.yml  deploy-docs.yml  pr-lint.yml  release.yml  scala-steward.yml  scorecard.yml
.helix/: languages.toml
.opencode/: PRD.md
.pi/: APPEND_SYSTEM.md  settings.json
.pi/chains/: codecov.yaml
.pi/extensions/: load-skills.ts
.work/: bugs.md  prd-embedded-wallet.md  prompt-2.md  prompt.md  review-scope.md  sqlite-finding.md
architecture/: index.html
backlog/: config.yml
backlog/tasks/: task-1 - Upgrade-images-version-in-docker-compose-setup.md
bindings/ts-types/: did_core_types.ts
changes/archive/: 2025-11-26-sqlite-backend-support.md
configuration/: database.html  index.html  indexer.html  logging.html  submitter.html
data/sqlite/: neoprism-dev.sqlite
docker/.config/: main.dhall
docker/.config/services/: caddy.dhall  cardano-node.dhall  cardano-submit-api.dhall  prism-node.dhall  ryo.dhall  uni-resolver-web.dhall
docker/.config/stack/: midnight.dhall  (+3 more)
docker/blockfrost-neoprism-demo/: .env.template  Caddyfile-blockfrost  README.md  compose.yml  ryo.yaml
docker/config/: main.py  models.py
docker/mainnet-blockfrost/: compose.yml
docker/mainnet-dbsync/: compose.yml
docker/mainnet-relay/: compose.yml
docker/mainnet-universal-resolver/: compose.yml
docker/midnight/: compose.yml
docker/preprod-relay/: compose.yml
docker/prism-test/: Caddyfile-blockfrost  README.md  compose-bf.yml  compose-ci-blockfrost.yml  compose-ci-embedded-wallet.yml  compose-ci-prismnode.yml  compose-ci-sqlite.yml  compose-ci.yml  compose-dev-sqlite.yml  compose-dev.yml  compose-ryo.yml  compose-sqlite-dev.yml  compose-sqlite.yml  compose.yml  init-did.hurl  init-wallet.hurl  mnemonic.txt  ryo.yaml
docker/universal-resolver/: compose.yml
docs/: book.toml
docs/notes/: sqlite.md
docs/src/: README.md  SUMMARY.md  useful-links.md
implementation-plan/: sqlite-support.md
installation/: docker.html  index.html  nix.html
lib/apollo/: Cargo.toml
lib/did-core/: Cargo.toml  README.md
lib/did-core/bindings/: Did.ts  DidDocument.ts  Service.ts  ServiceEndpoint.ts  ServiceType.ts  StringOrMap.ts  VerificationMethod.ts  VerificationMethodOrRef.ts  did_core_types.ts
lib/did-core/src/: did.rs  did_doc.rs  error.rs  lib.rs  resolution.rs  uri.rs
lib/did-core/src/utils/: uri.rs
lib/did-core/tests/: did.rs  resolution.rs
lib/did-midnight/: Cargo.toml
lib/did-midnight-sources/: Cargo.toml
lib/did-midnight-sources/graphql/: query.gql  schema.gql
lib/did-midnight-sources/src/: indexer_api.rs  lib.rs  serde_cli.rs
lib/did-midnight-sources/tests/: serde_cli.rs
lib/did-midnight/binding/: .gitignore  bundle.patch  deno.json  index.ts
lib/did-midnight/bindings/: DidDocument.ts  Service.ts  VerificationMethod.ts
lib/did-midnight/src/: did.rs  did_doc.rs  dlt.rs  error.rs  lib.rs  prelude.rs
lib/did-midnight/tests/: did_midnight.rs  ts_export.rs
lib/did-prism/: Cargo.toml
lib/did-prism-indexer/: Cargo.toml
lib/did-prism-ledger/: Cargo.toml
lib/did-prism-ledger/src/: lib.rs
lib/did-prism-ledger/src/in_memory/: mod.rs  sink.rs  source.rs
lib/did-prism-ledger/tests/: in_memory_ledger.rs
lib/did-prism-submitter/: Cargo.toml
lib/did-prism-submitter/src/: lib.rs
lib/did-prism-submitter/src/dlt/: cardano_wallet.rs  embedded_wallet.rs  in_memory.rs  mod.rs
lib/did-prism-submitter/src/dlt/embedded_wallet/: error.rs  key_derivation.rs  mnemonic.rs  mod.rs  tx_builder.rs  utxo.rs  wallet.rs
lib/did-prism-submitter/tests/: embedded_wallet.rs
lib/did-resolver-http/: Cargo.toml
lib/did-resolver-http/src/: lib.rs
lib/did-resolver-http/tests/: resolver_http.rs
lib/node-storage/: Cargo.toml
lib/node-storage/migrations/postgres/: 20251222102720_add_tx_hash.sql  20260129120000_add_blockfrost_page.sql
lib/node-storage/migrations/sqlite/: 20250424101829_migrate_from_seaorm.sql  20250612062110_vdr_index.sql  20251222102720_add_tx_hash.sql  20260129120000_add_blockfrost_page.sql
lib/node-storage/src/: lib.rs  pg.rs  snapshot.rs
lib/node-storage/src/backend/: mod.rs  postgres.rs  shared.rs  sqlite.rs
lib/node-storage/src/entity/: indexer.rs  mod.rs
nix/: neoprismLib.nix  pythonTools.nix  rustTools.nix
nix/cardano/: cardano-testnet-docker.nix  default.nix
nix/checks/: default.nix  neoprism-checks.nix  python-tools-checks.nix  tools-checks.nix
nix/devShells/: cardano.nix  default.nix  development.nix  docs.nix  midnight-did.nix  midnight.nix  neoprism.nix  prism-test.nix  release.nix
nix/docs/: default.nix
nix/embedded-wallet/: default.nix  package.nix
nix/neoprism/: binaries.nix  default.nix  images.nix
nix/pkgsInternal/: compactc.nix  default.nix  did-midnight-serde.nix  midnight-js-binding.nix
nix/prism-test/: default.nix
prism-test/: index.html
references/: cli-options.html  openapi.html  release-process.html
skills/neoprism-release/: SKILL.md
temp/: plan.md
tests/prism-test/: .scalafmt.conf  build.sbt
tmp/: PLAN.md  PROMPT.md  plan.md  prompt.md  todo.md
tools/: e2e.just  pyproject.toml  release.just  tools.just
tools/compose_gen/: __init__.py  main.py  metadata.py  models.py
tools/just-recipes/: e2e.just  embedded-wallet.just  env.just  release.just  tools.just
(+91 files in other folders)
