[workspace]
resolver = "3"
members = [
  "bin/neoprism-node",
  "lib/apollo",
  "lib/did-core",

  "lib/did-prism",
  "lib/did-prism-indexer",
  "lib/did-prism-ledger",
  "lib/did-prism-submitter",
  "lib/did-resolver-http",
  "lib/node-storage",
]

[workspace.package]
version = "0.13.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
# internal
identus-apollo   = { path = "lib/apollo" }
identus-did-core = { path = "lib/did-core" }

identus-did-prism           = { path = "lib/did-prism" }
identus-did-prism-indexer   = { path = "lib/did-prism-indexer" }
identus-did-prism-ledger    = { path = "lib/did-prism-ledger" }
identus-did-prism-submitter = { path = "lib/did-prism-submitter" }
identus-did-resolver-http   = { path = "lib/did-resolver-http" }
node-storage                = { path = "lib/node-storage" }
# general
anyhow             = { version = "1" }
async-trait        = { version = "0.1" }
axum               = { version = "0.8" }
blockfrost         = { version = "1.2", default-features = false }
blockfrost-openapi = { version = "0.1", default-features = false }
chrono             = { version = "0.4" }
clap               = { version = "4" }
derive_more        = { version = "2" }
enum_dispatch      = { version = "0.3" }
graphql_client     = { version = "0.14" }
im-rc              = { version = "15" }
lazybe             = { version = "0.2" }
maud               = { version = "0.27" }
regex              = { version = "1" }
reqwest            = { version = "0.12", default-features = false }
serde              = { version = "1" }
serde_json         = { version = "1" }
strum              = { version = "0.27" }
tokio              = { version = "1" }
tower              = { version = "0.5" }
tower-http         = { version = "0.6" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
ts-rs              = { version = "11.0" }
uriparse           = { version = "0.6" }
utoipa             = { version = "5" }
utoipa-scalar      = { version = "0.3" }
uuid               = { version = "1" }
# db
sqlx      = { version = "0.8" }
sea-query = { version = "0.32" }
dirs      = { version = "5" }
futures   = { version = "0.3" }
humantime = { version = "2" }
tempfile  = { version = "3" }
# cardano
oura                 = { git = "https://github.com/patextreme/oura.git", rev = "3546c03dac9fac8b5173332c1fe5122882e7351e" }
pallas-primitives-v0 = { package = "pallas-primitives", version = "0.30" }
pallas-primitives-v1 = { package = "pallas-primitives", version = "1.0.0-alpha.5" }
pallas-txbuilder-v1  = { package = "pallas-txbuilder", version = "1.0.0-alpha.5" }
pallas-addresses-v1  = { package = "pallas-addresses", version = "1.0.0-alpha.5" }
pallas-codec-v1      = { package = "pallas-codec", version = "1.0.0-alpha.5" }
pallas-crypto-v1     = { package = "pallas-crypto", version = "1.0.0-alpha.5" }
pallas-traverse-v1   = { package = "pallas-traverse", version = "1.0.0-alpha.5" }
bip39                = { version = "2.0", features = [ "rand_core" ] }
cryptoxide           = { version = "0.4" }
ed25519-bip32        = { version = "0.4" }
hmac                 = { version = "0.12" }
sha2                 = { version = "0.10" }
hex                  = { version = "0.4" }
# proto
protobuf         = { version = "3" }
protobuf-codegen = { version = "3" }
