[package]
name              = "identus-did-midnight"
version.workspace = true
edition.workspace = true

[dependencies]
identus-did-core = { workspace = true }
identus-apollo   = { workspace = true }
chrono           = { workspace = true }
derive_more      = { workspace = true, features = [ "as_ref", "from", "into", "debug", "display", "error" ] }
rustyscript      = { workspace = true, features = [ "fs" ] }
serde            = { workspace = true, features = [ "derive" ] }
serde_json       = { workspace = true }
utoipa           = { workspace = true, optional = true }

[features]
default = [  ]
openapi = [ "dep:utoipa" ]
