[package]
name              = "identus-did-prism-ledger"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono      = { workspace = true }
tokio       = { workspace = true, features = [ "sync", "time", "rt" ] }
tracing     = { workspace = true }

identus-apollo              = { workspace = true, features = [ "hash", "hex", "secp256k1", "ed25519", "x25519" ] }
identus-did-prism           = { workspace = true }
identus-did-prism-indexer   = { workspace = true }
identus-did-prism-submitter = { workspace = true }

[features]
default   = [  ]
in-memory = [  ]
