[package]
name              = "identus-did-prism-submitter"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true, features = [ "from", "debug", "display" ] }
serde       = { workspace = true, features = [ "derive" ] }
serde_json  = { workspace = true }
reqwest     = { workspace = true, optional = true, features = [ "native-tls", "json" ] }

identus-apollo    = { workspace = true, features = [ "hash", "hex", "secp256k1", "ed25519", "x25519" ] }
identus-did-prism = { workspace = true }

# Embedded wallet dependencies
pallas-primitives-v1 = { workspace = true, optional = true }
pallas-txbuilder     = { workspace = true, optional = true }
pallas-addresses     = { workspace = true, optional = true }
bip39                = { workspace = true, optional = true }
ed25519-bip32        = { workspace = true, optional = true }
hmac                 = { workspace = true, optional = true }
sha2                 = { workspace = true, optional = true }
hex                  = { workspace = true, optional = true }

[features]
default = [  ]
cardano-wallet = [ "dep:reqwest" ]
embedded-wallet = [
  "dep:pallas-primitives-v1",
  "dep:pallas-txbuilder",
  "dep:pallas-addresses",
  "dep:bip39",
  "dep:ed25519-bip32",
  "dep:hmac",
  "dep:sha2",
  "dep:hex",
]
