[package]
name              = "identus-did-resolver-http"
version.workspace = true
edition.workspace = true

[dependencies]
identus-did-core = { workspace = true }
axum             = { workspace = true }
derive_more      = { workspace = true, features = [ "from" ] }
utoipa           = { workspace = true, optional = true, features = [ "chrono" ] }

[dev-dependencies]
async-trait    = { workspace = true }
tokio          = { workspace = true, features = [ "rt", "macros" ] }
tower          = { workspace = true }
http-body-util = { workspace = true }
serde_json     = { workspace = true }

[features]
default = [  ]
openapi = [ "dep:utoipa", "identus-did-core/openapi" ]
