[package]
name              = "node-storage"
version.workspace = true
edition.workspace = true

[features]
default = [  ]
sqlite-storage = [
  "lazybe/sqlite",
  "sea-query/backend-sqlite",
  "sqlx/sqlite",
]

[dependencies]
async-trait    = { workspace = true }
chrono         = { workspace = true, features = [ "serde" ] }
derive_more    = { workspace = true, features = [ "from", "display", "error" ] }
identus-apollo = { workspace = true, features = [ "hex" ] }
lazybe         = { workspace = true, features = [ "postgres" ] }
protobuf       = { workspace = true }
sea-query      = { workspace = true, features = [ "backend-postgres", "with-uuid", "with-chrono" ] }
serde          = { workspace = true }
sqlx           = { workspace = true, features = [ "postgres", "uuid", "chrono" ] }
tracing        = { workspace = true }
uuid           = { workspace = true, features = [ "serde" ] }

identus-did-prism           = { workspace = true }
identus-did-prism-indexer   = { workspace = true }
identus-did-prism-submitter = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio    = { workspace = true, features = [ "macros", "rt-multi-thread" ] }
